2007-09-11  Kevin Decker <kdecker@apple.com>

        Reviewed by Oliver Hunt.

        Fixed: <rdar://problem/5472402> crash due to infinite recursion in expandUseElementsInShadowTree on SVG from wikipedia

        * ksvg2/svg/SVGUseElement.cpp: Added SVG_EXPERIMENTAL #ifdef for expandUseElementsInShadowTree().
        (WebCore::SVGUseElement::buildPendingResource): Ditto.
        (WebCore::SVGUseElement::associateInstancesWithShadowTreeElements): Tweaked an ASSERT to not fire on non-experimental builds.
        * ksvg2/svg/SVGUseElement.h: Added SVG_EXPERIMENTAL #ifdef for expandUseElementsInShadowTree().

2007-09-11  Brady Eidson  <beidson@apple.com>

        Reviewed by Maciej

        Fix for <rdar://problem/5473046> - Crash when resetting all icons

        Originally I'd written the "reset all icons" to be synchronous on the main thread, but it
        was decided that it should be async since it involved I/O.  Turns out it needs to be... both!
        Synchronous removal of all in-memory records of icons, and then continue and clean up the 
        on-disk database on the background thread.

        Also, it turns out that resetting all the page url retain counts should *not* be part of 
        "reset all icons" because it breaks various contracts the API makes about maintaining retain counts.

        The problem that occured here was removing all the icons, then all the history items that were 
        removed as part of "Reset Safari..." would try to release their icon, but their icon doesn't exist
        anymore.

        We get around this by simply leaving the in-memory page url records and retain counts alone - they
        are still wiped from disk.

        * loader/icon/IconDatabase.cpp:
        (WebCore::IconDatabase::removeAllIcons): Clear in-memory records of all icons then tell the thread to
          wipe the on-disk tables
        (WebCore::IconDatabase::removeAllIconsOnThread): Only do the disk cleanup - in-memory maintenance is